# match-backend

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  makefile  openapi_specs.json  pyproject.toml  requirements.txt
.data/: app.db
.github/workflows/: workflow.yaml
config/.github/workflows/: workflow.yaml
dotenv/: .env.template  .env.test
format-tools/: black.sh  isort.sh  mypy.sh
match/: bootstrap.py  config.py  db.py  main.py
match/alembic/: env.py
match/alembic/versions/: 2025_10_16_2141-99fd5de621d7_test.py  2025_10_17_1556-4230cf604685_add_status_col.py  2025_10_17_2158-991c4db937cd_.py  2025_10_17_2207-a2f4040556ee_.py  2025_10_17_2214-5ccbb3ad79dd_.py  2025_10_17_2229-fe4c28191d96_.py  2026_02_08_2226-69ec62a28362_initial.py  2026_06_18_2003-2c8bf01f47d5_add_user_table.py  2026_07_02_1554-e557cd96115f_add_user_password_hash.py
match/api/: task.py  user.py
match/app/: service.py
match/domain/: exceptions.py  interfaces.py  task.py  user.py
match/infra/: db_models.py  message_client.py  repositories.py
match/infra/api/: auth.py  health.py  repositories.py  schemas.py  security.py  task.py  user.py
match/tests/: conftest.py  test_bootstrap.py
match/tests/infra/: test_api.py  test_repositories.py
match/tests/integration/: conftest.py  test_helpseeker.py  test_user.py
match/tests/unit/domain/: test_user.py
match/tests/unit/infra/: test_api.py  test_repositories.py
match/tests/unit/infra/api/: conftest.py  test_api_task.py  (+1 more)
scripts/: generate_openapi.py
